--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Momentum</title>
   </head>
   <body>
+    <h2 id="clock">00:00:00</h2>
     <form id="login-form" class="hidden">
       <input 
         required
@@ -16,7 +17,6 @@
       />
       <input type="submit" value="Log In" />
     </form>
-    <h2 id="clock">00:00:00</h2>
     <h1 id="greeting" class="hidden"></h1>
     <form id="todo-form"">
       <input type="text" placeholder="Write a To Do and Press Enter" required />
@@ -26,10 +26,15 @@
       <span></span>
       <span></span>
     </div>
+    <div id="weather">
+      <span></span>
+      <span></span>
+    </div>
     <script src="./js/greetings.js"></script>
     <script src="./js/clock.js"></script>
     <script src="./js/quotes.js"></script>
     <script src="./js/background.js"></script>
     <script src="./js/todo.js"></script>
+    <script src="./js/weather.js"></script>
   </body>
 </html>
