--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <span style="display: block;"></span>
       </div>
     </div>
+    <button type="button" id="logout-button" class="hidden">Log Out</button>
     <script src="./js/greetings.js"></script>
     <script src="./js/clock.js"></script>
     <script src="./js/quotes.js"></script>
